Refactor conditionals and string generation